syntax = "proto3";

package xraymon.commands;

import "google/protobuf/duration.proto";

option go_package = "github.com/eterline/xraymon/internal/interface/grpc/commands";

// ============

service CoreManagmentService {
    rpc ConnectionJournal(ConnectionJournalRequest) returns (stream ConnectionMeta);

    rpc CoreStatus(CoreStatusRequest) returns (CoreStatusResponse);
    rpc CoreRestart(CoreRestartRequest) returns (CoreRestartResponse);

    rpc GetConfig(GetConfigRequest) returns (GetConfigResponse);
    rpc UploadConfig(UploadConfigRequest) returns (UploadConfigResponse);
}

// ============

// message ConnectionIO {
//     uint64 BytesRX          = 1;
//     uint64 BytesTX          = 2;
//     uint64 BytesPerSecRx    = 3;
//     uint64 BytesPerSecTx    = 4;
// }

// enum ConnectionType {
//     Inbound  = 0;
//     Outbound = 1;
//     User     = 2;
// }

// message StatsMeta {
//     ConnectionType  Type    = 1;
//     string          Alias   = 2;
//     ConnectionIO    IO      = 3;
// }

message ConnectionJournalRequest {
    uint64 last = 1;
}

enum NetType {
    HTTP    = 0;
    TCP     = 1;
    UDP     = 2;
}

message ConnectionMeta {
    string  client   = 1;
    string  server   = 2;
    NetType proto    = 3;
    string  inbound  = 4;
    string  outbound = 5;
    string  user     = 6;
}

// =======

message CoreStatusRequest {}

message CoreStatusResponse {
    bool                        working         = 1;
    string                      last_log         = 2;
    google.protobuf.Duration    working_time    = 3;
}

// =======

message CoreRestartRequest {}

message CoreRestartResponse {}

// =======

message GetConfigRequest {}

message GetConfigResponse {
    string data = 1;
}

message UploadConfigRequest {
    string   data        = 1;
    bool     restart_core = 2;
}

message UploadConfigResponse {}